fix: Исправлено баг с overflow

--- a/src/widgets/exchangeSteps/ui/exchangeSteps.module.scss
+++ b/src/widgets/exchangeSteps/ui/exchangeSteps.module.scss
@@ -35,6 +35,7 @@
 
   & .stepsSlider {
     width: 100%;
+    overflow: visible;
 
     & :global(.swiper-pagination-bullets) {
       position: initial;
@@ -52,10 +53,6 @@
         margin-top: 1.6rem;
         display: flex;
       }
-    }
-
-    @include md-d {
-      overflow: visible;
     }
   }
 
